# helsinki-guide-test

./: README.md  pyproject.toml
data/: expectations.resource
libraries/: telegram_chats.py
resources/: chat.resource  common.resource
resources/page_objects/: bot_panel.resource  chat.resource  left_panel.resource
tests/: 01__smoke.robot  02__address_buttons.robot  03__messages.robot  __init__.robot  smoke.robot
