[tool.poetry]
name = "helsinki-guide-test"
version = "0.1.0"
description = "UI tests for a Helsinki Guide bot."
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12.1"
robotframework = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
